tests/errors/default_type_mismatch_lists.dang
# This should fail: mixing String and Int lists in default operator
let result = [] ?? ["foo"] ?? [3]
